<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cell Sites</string>
    <string name="action_exit">Exit</string>
    <string name="action_help">Help</string>
    <string name="title_activity_cell_info">Cell Sites Info</string>
    <string name="action_cells">Cell Sites Info</string>
    <string name="action_start_trace">Start tracking</string>
   <string name="action_stop_trace">Stop tracking</string>
    
</resources>
