<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_start_trace"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_start_trace"/>

    <item
        android:id="@+id/action_stop_trace"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_stop_trace"/>

        <item
        android:id="@+id/action_cells"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_cells"/>
       
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_help"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_exit"/>
    
</menu>
